--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/dev": "^0.1.0",
     "@react-native-community/masked-view": "0.1.5",
     "@react-navigation/native": "^5.1.4",
     "@react-navigation/stack": "^5.2.9",
     "axios": "^0.19.2",
     "expo": "^36.0.0",
+    "expo-font": "~8.0.0",
     "gh-pages": "^2.2.0",
     "grid": "^3.3.7",
     "react": "16.9.0",
